--- a/things-portal-display.html
+++ b/things-portal-display.html
@@ -6,6 +6,16 @@ Copyright © HatioLab Inc. All rights reserved.
 
 <dom-module id="things-portal-display">
   <style>
+    :host{
+      display:block;
+      background-color:#f1f1f1;
+      padding:15px 0 10px 0;
+      color:#666;
+      font-weight:bold;
+      font-size:18px;
+      text-transform:uppercase;
+      text-align:center;
+    }
   </style>
 
   <template>
